# cpp-game-room

./: CMakeLists.txt  README.md  TODO.md  docker-compose.yml
bot/: CMakeLists.txt  bot_client.cpp  bot_client.h  bot_main.cpp  bot_manager.cpp  bot_manager.h
build-real/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-real/Testing/Temporary/: CTestCostData.txt
build-real/bot/: Makefile  game_bot
build-real/src/: Makefile  common.pb.cc  common.pb.h  game.pb.cc  game_server  login.pb.cc  match.pb.cc  rank.pb.cc  rank.pb.h  room.pb.cc  room.pb.h
build-real/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  game_tests  game_tests[1]_include.cmake  game_tests[1]_tests.cmake
config/: mysql.sql  redis.conf  server.yaml
docs/: architecture.md  interview_notes.md  pressure_test.md  protocol.md  数据库设计.md
proto/: common.proto  game.proto  login.proto  match.proto  rank.proto  room.proto
src/: CMakeLists.txt  main.cpp
src/config/: config_manager.cpp  config_manager.h
src/game/: game_loop.cpp  game_loop.h  game_room.cpp  game_room.h  game_state.h  input_buffer.cpp  input_buffer.h  settlement_service.cpp  settlement_service.h  state_sync.cpp  state_sync.h
src/login/: login_service.cpp  login_service.h
src/match/: match_queue.cpp  match_queue.h  match_service.cpp  match_service.h
src/net/: codec.cpp  codec.h  connection_manager.h  packet.cpp  packet.h  session.cpp  session.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
src/player/: player.cpp  player.h  player_manager.cpp  player_manager.h
src/protocol/: message_id.h  proto_helper.cpp  proto_helper.h
src/rank/: rank_service.cpp  rank_service.h
src/room/: room.cpp  room.h  room_manager.cpp  room_manager.h  room_player.h  room_state.h
src/server/: game_server.cpp  game_server.h  message_dispatcher.cpp  message_dispatcher.h  service_context.cpp  service_context.h
src/storage/: battle_repository.cpp  battle_repository.h  mysql_client.cpp  mysql_client.h  player_repository.cpp  player_repository.h  redis_client.cpp  redis_client.h
src/timer/: timer_manager.cpp  timer_manager.h
src/util/: id_generator.h  logger.cpp  logger.h  noncopyable.h  random_util.h  time_util.h
tests/: CMakeLists.txt  test_match_queue.cpp  test_protocol.cpp  test_rank_service.cpp  test_room_state.cpp  test_settlement.cpp
